--- a/Project4/index.html
+++ b/Project4/index.html
@@ -26,7 +26,7 @@
             <div class="col">
                 <img src="images/humidity.png">
                 <div>
-                    <p class="humidity">50%
+                    <p class="humidity">
                     </p>
                     <p>Humidity</p>
                 </div>
@@ -34,7 +34,7 @@
             <div class="col">
                 <img src="images/wind.png">
                 <div>
-                    <p class="wind">15 km/h
+                    <p class="wind">
                     </p>
                     <p>Wind Speed</p>
                 </div>
